--- a/index.html
+++ b/index.html
@@ -481,8 +481,8 @@
       },
       {
         "type": "link",
-        "title": "ipc.court.gov.cn/daohang/web/applyInfor.html?courtId=2&id=75",
-        "url": "https://ipc.court.gov.cn/daohang/web/applyInfor.html?courtId=2&id=75",
+        "title": "中国执行信息公开网",
+        "url": "https://cjdh.court.gov.cn/performInformation.html",
         "icon": "🌐"
       },
       {
@@ -2124,4 +2124,5 @@
         });
     </script>
 </body>
+
 </html>
