a little modify at index

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
     </div>
 
     <div class="version-info">
-        静态导航页面 v1.0 (更新时间: 2025-11-19 13:35:38) | <a href="#" onclick="alert('纯静态版本，无需后台服务器\n可直接作为新标签页使用！'); return false;">使用说明</a>
+        静态导航页面 v1.0 (更新时间: 2025-12-02 17:29:38) | <a href="#" onclick="alert('纯静态版本，无需后台服务器\n可直接作为新标签页使用！'); return false;">使用说明</a>
     </div>
 
     <script>
@@ -527,6 +527,12 @@
         "title": "ByteDance IconPark",
         "url": "https://iconpark.oceanengine.com/home",
         "icon": "https://logo.clearbit.com/iconpark.oceanengine.com"
+      },
+      {
+        "type": "link",
+        "title": "RGB颜色对照表",
+        "url": "https://tool.oschina.net/commons?type=3",
+        "icon": "https://logo.clearbit.com/tool.oschina.net"
       }
     ],
     "官方布告": [
@@ -747,6 +753,12 @@
         "title": "Skin Frost Glass V7 for Rainmeter download on VSThemes.org",
         "url": "https://vsthemes.org/en/skins/rainmeter/68411-frost-glass-v7.html",
         "icon": "https://logo.clearbit.com/vsthemes.org"
+      },
+      {
+        "type": "link",
+        "title": "Johnshall/Shadowrocket-ADBlock-Rules-Forever: 提供多款 Shadowrocket 规则，拥有强劲的广告过滤功能。每日 8 时重新构建规则。",
+        "url": "https://github.com/Johnshall/Shadowrocket-ADBlock-Rules-Forever?tab=readme-ov-file",
+        "icon": "https://logo.clearbit.com/github.com"
       }
     ],
     "AI agent": [
@@ -1423,6 +1435,12 @@
         "title": "字体下载-求字体网提供中文和英文字体库下载、识别与预览服务，找字体的好帮手",
         "url": "http://www.qiuziti.com/",
         "icon": "https://logo.clearbit.com/www.qiuziti.com"
+      },
+      {
+        "type": "link",
+        "title": "Unicode 符号表 - 所有 Unicode 字符及其代码都在一页上 (◕‿◕) SYMBL",
+        "url": "https://symbl.cc/cn/unicode-table/#enclosed-alphanumerics",
+        "icon": "https://logo.clearbit.com/symbl.cc"
       }
     ]
   },
@@ -1783,6 +1801,12 @@
         "title": "URL Snake!",
         "url": "https://demian.ferrei.ro/snake#|%E2%9F%8B%E2%9F%8B%E2%9F%8B%E2%9F%8B%E2%9F%8B%E2%9F%8B%E2%9F%8B%E2%A1%80%E2%9F%8B%E2%9F%8B%E2%9F%8B%E2%9F%8B%E2%9F%8B%E2%9F%8B%E2%9F%8B%E2%A0%A4%E2%A0%A4%E2%A0%84%E2%9F%8B%E2%9F%8B|[score:1]",
         "icon": "https://logo.clearbit.com/demian.ferrei.ro"
+      },
+      {
+        "type": "link",
+        "title": "LeoLabs | Persistent Orbital Intelligence Propelling the dynamic space era",
+        "url": "https://leolabs.space/",
+        "icon": "https://logo.clearbit.com/leolabs.space"
       }
     ]
   }
