--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
     </div>
 
     <div class="version-info">
-        静态导航页面 v1.0 (更新时间: 2025-12-02 17:29:38) | <a href="#" onclick="alert('纯静态版本，无需后台服务器\n可直接作为新标签页使用！'); return false;">使用说明</a>
+        静态导航页面 v1.0 (更新时间: 2025-12-09 11:36:00) | <a href="#" onclick="alert('纯静态版本，无需后台服务器\n可直接作为新标签页使用！'); return false;">使用说明</a>
     </div>
 
     <script>
@@ -637,6 +637,36 @@
         "title": "包头稀土高新区",
         "url": "http://www.rev.gov.cn/tzgg1/index.jhtml",
         "icon": "https://logo.clearbit.com/www.rev.gov.cn"
+      },
+      {
+        "type": "link",
+        "title": "首页 - 合同示范文本库 - 国家市场监督管理总局",
+        "url": "https://htsfwb.samr.gov.cn/",
+        "icon": "https://logo.clearbit.com/htsfwb.samr.gov.cn"
+      },
+      {
+        "type": "link",
+        "title": "国家企业信用信息公示系统",
+        "url": "https://shiming.gsxt.gov.cn/corp-query-homepage.html",
+        "icon": "https://logo.clearbit.com/shiming.gsxt.gov.cn"
+      },
+      {
+        "type": "link",
+        "title": "标准地图服务系统",
+        "url": "http://bzdt.ch.mnr.gov.cn/",
+        "icon": "https://logo.clearbit.com/bzdt.ch.mnr.gov.cn"
+      },
+      {
+        "type": "link",
+        "title": "国家数据",
+        "url": "https://data.stats.gov.cn/index.htm",
+        "icon": "https://logo.clearbit.com/data.stats.gov.cn"
+      },
+      {
+        "type": "link",
+        "title": "国家药品监督管理局数据查询",
+        "url": "https://www.nmpa.gov.cn/datasearch/home-index.html#category=yp",
+        "icon": "https://logo.clearbit.com/www.nmpa.gov.cn"
       }
     ],
     "个人终端": [
@@ -1025,6 +1055,12 @@
         "title": "Sketchfab - Publish & find 3D models online",
         "url": "https://sketchfab.com/",
         "icon": "https://logo.clearbit.com/sketchfab.com"
+      },
+      {
+        "type": "link",
+        "title": "软仓 | RuanCang.Net",
+        "url": "https://www.ruancang.net/",
+        "icon": "https://logo.clearbit.com/www.ruancang.net"
       }
     ],
     "人文素质": [
@@ -1263,6 +1299,18 @@
         "title": "Semantic Scholar | AI-Powered Research Tool",
         "url": "https://www.semanticscholar.org/",
         "icon": "https://logo.clearbit.com/www.semanticscholar.org"
+      },
+      {
+        "type": "link",
+        "title": "国家哲学社会科学文献中心",
+        "url": "https://www.ncpssd.cn/",
+        "icon": "https://logo.clearbit.com/www.ncpssd.cn"
+      },
+      {
+        "type": "link",
+        "title": "中国科普博览",
+        "url": "https://www.kepu.net.cn/",
+        "icon": "https://logo.clearbit.com/www.kepu.net.cn"
       }
     ],
     "教育资料": [
@@ -1317,6 +1365,12 @@
         "title": "爱课程",
         "url": "https://www.icourses.cn/sCourse/course_3064.html",
         "icon": "https://logo.clearbit.com/www.icourses.cn"
+      },
+      {
+        "type": "link",
+        "title": "国家职业教育智慧教育平台",
+        "url": "https://vocational.smartedu.cn/NationalHome?redirect=%2F&code&state",
+        "icon": "https://logo.clearbit.com/vocational.smartedu.cn"
       }
     ],
     "eBooks": [
@@ -1370,12 +1424,6 @@
       },
       {
         "type": "link",
-        "title": "中国国家图书馆•中国国家数字图书馆",
-        "url": "http://www.nlc.cn/",
-        "icon": "https://logo.clearbit.com/www.nlc.cn"
-      },
-      {
-        "type": "link",
         "title": "全国图书馆参考咨询联盟",
         "url": "http://www.ucdrs.superlib.net/",
         "icon": "https://logo.clearbit.com/www.ucdrs.superlib.net"
@@ -1403,6 +1451,18 @@
         "title": "阅读 - 源仓库",
         "url": "https://www.yckceo.com/yuedu/shuyuan/index.html",
         "icon": "https://logo.clearbit.com/www.yckceo.com"
+      },
+      {
+        "type": "link",
+        "title": "太极书馆 -- 让智慧更近",
+        "url": "https://www.8bei8.com/",
+        "icon": "https://logo.clearbit.com/www.8bei8.com"
+      },
+      {
+        "type": "link",
+        "title": "中国国家图书馆 · 中国国家数字图书馆 · 国家典籍博物馆",
+        "url": "https://www.nlc.cn/web/index.shtml",
+        "icon": "https://logo.clearbit.com/www.nlc.cn"
       }
     ],
     "字体": [
@@ -1791,6 +1851,18 @@
         "title": "朋友圈文案生成器 - https://shadiao.app",
         "url": "https://pyq.shadiao.app/",
         "icon": "https://logo.clearbit.com/pyq.shadiao.app"
+      },
+      {
+        "type": "link",
+        "title": "邮政业申诉服务平台",
+        "url": "https://sswz.spb.gov.cn/portal/home",
+        "icon": "https://logo.clearbit.com/sswz.spb.gov.cn"
+      },
+      {
+        "type": "link",
+        "title": "IT Tools - Handy online tools for developers",
+        "url": "https://it-tools.tech/",
+        "icon": "https://logo.clearbit.com/it-tools.tech"
       }
     ]
   },
