--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
     </div>
 
     <div class="version-info">
-        静态导航页面 v1.0 (更新时间: 2025-12-09 11:36:00) | <a href="#" onclick="alert('纯静态版本，无需后台服务器\n可直接作为新标签页使用！'); return false;">使用说明</a>
+        静态导航页面 v1.0 (更新时间: 2025-12-27 16:25:01) | <a href="#" onclick="alert('纯静态版本，无需后台服务器\n可直接作为新标签页使用！'); return false;">使用说明</a>
     </div>
 
     <script>
@@ -714,12 +714,6 @@
       },
       {
         "type": "link",
-        "title": "【2023】适合小白的V2Ray(VLESS+WebSocket+TLS)一键搭建图文教程，V2Ray搭建教程，免费域名",
-        "url": "https://www.itblogcn.com/article/2026.html",
-        "icon": "https://logo.clearbit.com/www.itblogcn.com"
-      },
-      {
-        "type": "link",
         "title": "适用于 Linux 的 Windows 子系统文档 | Microsoft Learn",
         "url": "https://learn.microsoft.com/zh-cn/windows/wsl/",
         "icon": "https://logo.clearbit.com/learn.microsoft.com"
@@ -789,6 +783,90 @@
         "title": "Johnshall/Shadowrocket-ADBlock-Rules-Forever: 提供多款 Shadowrocket 规则，拥有强劲的广告过滤功能。每日 8 时重新构建规则。",
         "url": "https://github.com/Johnshall/Shadowrocket-ADBlock-Rules-Forever?tab=readme-ov-file",
         "icon": "https://logo.clearbit.com/github.com"
+      },
+      {
+        "type": "link",
+        "title": "Link Vegas Theme - Theme",
+        "url": "https://www.linkvegastheme.com/",
+        "icon": "https://logo.clearbit.com/www.linkvegastheme.com"
+      },
+      {
+        "type": "link",
+        "title": "下载安装 · Project V 官方网站",
+        "url": "https://www.v2ray.com/chapter_00/install.html",
+        "icon": "https://logo.clearbit.com/www.v2ray.com"
+      },
+      {
+        "type": "link",
+        "title": "V2Ray搭建详细图文教程 · 233boy/v2ray Wiki",
+        "url": "https://github.com/233boy/v2ray/wiki/V2Ray%E6%90%AD%E5%BB%BA%E8%AF%A6%E7%BB%86%E5%9B%BE%E6%96%87%E6%95%99%E7%A8%8B",
+        "icon": "https://logo.clearbit.com/github.com"
+      },
+      {
+        "type": "link",
+        "title": "V2Ray手动安装 | Note",
+        "url": "https://3385706034.gitbook.io/note/v2ray-install",
+        "icon": "https://logo.clearbit.com/3385706034.gitbook.io"
+      },
+      {
+        "type": "link",
+        "title": "v2fly/v2ray-examples: v2ray-core 的模板们",
+        "url": "https://github.com/v2fly/v2ray-examples/tree/master",
+        "icon": "https://logo.clearbit.com/github.com"
+      },
+      {
+        "type": "link",
+        "title": "WebSocket+TLS+Web · V2Ray 配置指南|V2Ray 白话文教程",
+        "url": "https://toutyrater.github.io/advanced/wss_and_web.html",
+        "icon": "https://logo.clearbit.com/toutyrater.github.io"
+      },
+      {
+        "type": "link",
+        "title": "【新手教程】2025最新V2Ray搭建图文教程，V2Ray一键搭建脚本！",
+        "url": "https://www.itblogcn.com/article/1501.html",
+        "icon": "https://logo.clearbit.com/www.itblogcn.com"
+      },
+      {
+        "type": "link",
+        "title": "233boy/v2ray: 最好用的 V2Ray 一键安装脚本 & 管理脚本",
+        "url": "https://github.com/233boy/v2ray/tree/master",
+        "icon": "https://logo.clearbit.com/github.com"
+      },
+      {
+        "type": "link",
+        "title": "在 Hyper-V 中对 GPU 进行分区并分配给虚拟机 | Microsoft Learn",
+        "url": "https://learn.microsoft.com/zh-cn/windows-server/virtualization/hyper-v/partition-assign-vm-gpu?tabs=powershell",
+        "icon": "https://logo.clearbit.com/learn.microsoft.com"
+      },
+      {
+        "type": "link",
+        "title": "Making the installer in Windows | OpenCore Install Guide",
+        "url": "https://dortania.github.io/OpenCore-Install-Guide/installer-guide/windows-install.html#downloading-macos",
+        "icon": "https://logo.clearbit.com/dortania.github.io"
+      },
+      {
+        "type": "link",
+        "title": "HyperV安装macOS - KINDYEAR Blog",
+        "url": "https://www.kindyear.cn/archives/949/",
+        "icon": "https://logo.clearbit.com/www.kindyear.cn"
+      },
+      {
+        "type": "link",
+        "title": "Qonfused/OSX-Hyper-V: OpenCore configuration for running macOS on Windows Hyper-V.",
+        "url": "https://github.com/Qonfused/OSX-Hyper-V?tab=readme-ov-file",
+        "icon": "https://logo.clearbit.com/github.com"
+      },
+      {
+        "type": "link",
+        "title": "【Win】双系统新体验：Hyper-V上macOS安装攻略",
+        "url": "https://blob.wenxiaobai.com/article/182ac237-d66f-d8cb-2d8b-030a475a99ea",
+        "icon": "https://logo.clearbit.com/blob.wenxiaobai.com"
+      },
+      {
+        "type": "link",
+        "title": "Releases · acidanthera/OpenCorePkg",
+        "url": "https://github.com/acidanthera/OpenCorePkg/releases",
+        "icon": "https://logo.clearbit.com/github.com"
       }
     ],
     "AI agent": [
@@ -821,6 +899,36 @@
         "title": "DeepSeek 本地化部署（保姆喂饭级教程） - 知乎",
         "url": "https://zhuanlan.zhihu.com/p/21030210489",
         "icon": "https://logo.clearbit.com/zhuanlan.zhihu.com"
+      },
+      {
+        "type": "link",
+        "title": "fastrepl/hyprnote: Local-first AI Notepad for Private Meetings",
+        "url": "https://github.com/fastrepl/hyprnote?tab=readme-ov-file",
+        "icon": "https://logo.clearbit.com/github.com"
+      },
+      {
+        "type": "link",
+        "title": "oceanbase/seekdb: The AI-Native Search Database. Unifies vector, text, structured and semi-structured data in a single engine, enabling hybrid search and in-database AI workflows.",
+        "url": "https://github.com/oceanbase/seekdb",
+        "icon": "https://logo.clearbit.com/github.com"
+      },
+      {
+        "type": "link",
+        "title": "topoteretes/cognee: Memory for AI Agents in 6 lines of code",
+        "url": "https://github.com/topoteretes/cognee",
+        "icon": "https://logo.clearbit.com/github.com"
+      },
+      {
+        "type": "link",
+        "title": "花 5 分钟自己构建手写数字识别项目，这是一个完全体，可以识别你自己的图片-CSDN博客",
+        "url": "https://blog.csdn.net/dongtuoc/article/details/143752671",
+        "icon": "https://logo.clearbit.com/blog.csdn.net"
+      },
+      {
+        "type": "link",
+        "title": "esbatmop/MNBVC: MNBVC(Massive Never-ending BT Vast Chinese corpus)超大规模中文语料集。对标chatGPT训练的40T数据。MNBVC数据集不但包括主流文化，也包括各个小众文化甚至火星文的数据。MNBVC数据集包括新闻、作文、小说、书籍、杂志、论文、台词、帖子、wiki、古诗、歌词、商品介绍、笑话、糗事、聊天记录等一切形式的纯文本中文数据。",
+        "url": "https://github.com/esbatmop/MNBVC",
+        "icon": "https://logo.clearbit.com/github.com"
       }
     ],
     "电磁学": [
@@ -1061,6 +1169,18 @@
         "title": "软仓 | RuanCang.Net",
         "url": "https://www.ruancang.net/",
         "icon": "https://logo.clearbit.com/www.ruancang.net"
+      },
+      {
+        "type": "link",
+        "title": "AtsushiSakai/PythonRobotics: Python sample codes and textbook for robotics algorithms.",
+        "url": "https://github.com/AtsushiSakai/PythonRobotics",
+        "icon": "https://logo.clearbit.com/github.com"
+      },
+      {
+        "type": "link",
+        "title": "fastapi-best-practices/README_ZH.md at master · zhanymkanov/fastapi-best-practices",
+        "url": "https://github.com/zhanymkanov/fastapi-best-practices/blob/master/README_ZH.md",
+        "icon": "https://logo.clearbit.com/github.com"
       }
     ],
     "人文素质": [
